--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "task-manager-app",
+  "name": "task-manager-react-native-app",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
+  "private": true,
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -21,7 +22,8 @@
     "react-native-paper": "^5.8.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -37,6 +39,5 @@
     "eslint-plugin-react-native": "^4.0.0",
     "prettier": "^2.8.8",
     "typescript": "^4.9.4"
-  },
-  "private": true
+  }
 }
