--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-dev-client": "~2.2.1",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^9.22.2",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-date-picker": "^4.2.13",
