--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "task-manager-react-native-app",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "private": true,
   "scripts": {
     "dev-start": "expo start --dev-client",
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix && yarn format",
@@ -18,18 +17,22 @@
   },
   "dependencies": {
     "@expo-google-fonts/plus-jakarta-sans": "^0.2.3",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.18",
     "expo-dev-client": "~2.2.1",
     "expo-font": "~11.1.1",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
+    "expo-system-ui": "~2.2.1",
     "firebase": "^9.22.2",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-date-picker": "^4.2.13",
     "react-native-paper": "^5.8.0",
+    "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-vector-icons": "^9.2.0",
