--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   },
   "dependencies": {
     "@expo-google-fonts/plus-jakarta-sans": "^0.2.3",
+    "@gorhom/bottom-sheet": "^4",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/material-bottom-tabs": "^6.2.15",
-    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.18",
     "expo-dev-client": "~2.2.1",
@@ -31,6 +32,7 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-date-picker": "^4.2.13",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-paper": "^5.8.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
@@ -55,5 +57,8 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "prettier": "^2.8.8",
     "typescript": "^4.9.4"
+  },
+  "resolutions": {
+    "react-native-gesture-handler": "~2.9.0"
   }
 }
