--- a/package.json
+++ b/package.json
@@ -19,16 +19,19 @@
     "@expo-google-fonts/plus-jakarta-sans": "^0.2.3",
     "@gorhom/bottom-sheet": "^4",
     "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-firebase/app": "^18.1.0",
+    "@react-native-firebase/auth": "^18.1.0",
+    "@react-native-firebase/firestore": "^18.1.0",
     "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.12",
+    "@skillnation/react-native-firebase-hooks": "^0.5.0",
     "expo": "~48.0.18",
     "expo-dev-client": "~2.2.1",
     "expo-font": "~11.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "expo-system-ui": "~2.2.1",
-    "firebase": "^9.22.2",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-date-picker": "^4.2.13",
