--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "task-manager-react-native-app",
+  "name": "task-management-react-native-app",
   "version": "1.0.0",
   "private": true,
+  "engines": {
+    "node": "18"
+  },
   "scripts": {
-    "dev-start": "expo start --dev-client",
-    "start": "expo start --dev-client",
+    "dev-start": "expo start --dev-client --clear",
+    "start": "expo start --dev-client --clear",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
@@ -18,7 +21,6 @@
   "dependencies": {
     "@expo-google-fonts/plus-jakarta-sans": "^0.2.3",
     "@gorhom/bottom-sheet": "^4",
-    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-firebase/app": "^18.1.0",
     "@react-native-firebase/auth": "^18.1.0",
     "@react-native-firebase/firestore": "^18.1.0",
