--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "task-management-react-native-app",
+  "name": "taskify",
   "version": "1.0.0",
   "private": true,
   "engines": {
@@ -16,11 +16,13 @@
     "lint:strict": "eslint --max-warnings=0 .",
     "typechecks": "tsc --noEmit --incremental false",
     "format": "prettier -w '**/*.{ts,tsx,js,jsx,css,scss}'",
-    "format:check": "prettier -c ."
+    "format:check": "prettier -c .",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@expo-google-fonts/plus-jakarta-sans": "^0.2.3",
     "@gorhom/bottom-sheet": "^4",
+    "@pchmn/expo-material3-theme": "^1.3.1",
     "@react-native-firebase/app": "^18.1.0",
     "@react-native-firebase/auth": "^18.1.0",
     "@react-native-firebase/firestore": "^18.1.0",
@@ -50,6 +52,7 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.27",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard-with-typescript": "^35.0.0",
@@ -61,10 +64,20 @@
     "eslint-plugin-react-native": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "husky": "^8.0.0",
     "prettier": "^2.8.8",
     "typescript": "^4.9.4"
   },
   "resolutions": {
     "react-native-gesture-handler": "~2.9.0"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx}": [
+      "eslint --max-warnings=0",
+      "prettier --write"
+    ],
+    "src/**/*.{json,css,scss,md,mdx}": [
+      "prettier --write"
+    ]
   }
 }
