chore: install expo-device, expo-notification packages

--- a/eas.json
+++ b/eas.json
@@ -6,7 +6,10 @@
     "development": {
       "extends": "production",
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "android": {
+        "buildType": "apk"
+      }
     },
     "preview": {
       "extends": "production",
