--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "expo": "~48.0.18",
     "expo-build-properties": "~0.6.0",
     "expo-dev-client": "~2.2.1",
+    "expo-device": "~5.2.1",
     "expo-font": "~11.1.1",
+    "expo-notifications": "~0.18.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "expo-system-ui": "~2.2.1",
@@ -45,7 +47,7 @@
     "react-native-gesture-handler": "~2.9.0",
     "react-native-paper": "^5.8.0",
     "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "^4.7.1",
+    "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-vector-icons": "^9.2.0",
     "zustand": "^4.3.8"
